# cas

./: .gitignore  cas.cabal  stack.yaml
src/: Cas.hs
src/Cas/: Examples.hs  Graph.hs  Interface.hs  LinearSystem.hs  Misc.hs  QuickCheckTest.hs  Rules.hs
src/Cas/Instances/: Other.hs  Show.hs
src/Cas/Internal/: Def.hs  Interface.hs  Normalization.hs  Utils.hs
src/Cas/Internal/Def/: Interface.hs
src/Cas/Internal/Instances/: TFoldable.hs  TFunctor.hs
src/Cas/LinearSystem/: Internal.hs
src/Cas/Misc/: TH.hs
